<resources>
  <string name="my_account">My Account</string>
  <string name="setting_schdwntitle">Scheduled Downloads</string>
  <string name="settings">Settings</string>
  <string name="facebook">Facebook</string>
  <string name="twitter">Twitter</string>
  <string name="backup_apps">Backup Apps</string>
  <string name="dark">Dark</string>
  <string name="light">Light</string>
  <string name="updates_filter_summary">Checking this, you won’t be notified of beta versions.</string>
  <string name="updates_filter_setting_title">Just show me stable app version updates</string>
  <string name="include_system_apps_title">Include system apps</string>
  <string name="include_system_apps_summary">Checking this, you will be notified of system apps (apps that were installed by the device\'s manufacturer) updates</string>
  <string name="aptoide_email">aptoide@aptoide.com</string>
  <string name="aptoide_url">http://www.aptoide.com/</string>
  <string name="access_to_get_accounts_rationale">You need to allow access to Get Accounts</string>
  <string name="developer_website">Website: %s</string>
  <string name="not_available">N/A</string>
  <string name="developer_email">Email: %s</string>
  <string name="developer_privacy_policy">Privacy Policy: %s</string>
  <string name="open">Open</string>
  <string name="button_header_more">more</string>
  <string name="search">Search</string>
  <string name="update">Update</string>
  <string name="uninstall">Uninstall</string>
  <string name="downgrade">Downgrade</string>
  <string name="appview_followers_count_text">%1$s   Followers</string>
  <string name="other_versions_downloads_count_text">%1$s   downloads</string>
  <string name="menu_select_all">Select All</string>
  <string name="menu_select_none">Select None</string>
  <string name="clear">Clear</string>
  <string name="excluded_updates">Excluded Updates</string>
  <string name="no_excluded_updates_msg">The new version of an app doesn’t work on your device or some feature is
        missing? Block apps from updating. Go to Updates tab and long press on the app that you want to stop
        updating.</string>
  <string name="restore_updates">Restore Updates</string>
  <string name="open_apps_manager">Open Apps Manager</string>
  <string name="rollback">Rollback</string>
  <string name="no_rollbacks_msg">Quickly downgrade any app to a previous version and solve incompatibility issues. Keep a log of all your installed
        apps (via %s) including version and install date.</string>
  <string name="menu_card_timeline_clear">Clear</string>
  <string name="fragment_social_timeline_aptoide_team">Aptoide Team</string>
  <string name="fragment_social_timeline_no_connection">No network connection</string>
  <string name="fragment_social_timeline_general_error">Having some trouble. Can you retry later?</string>
  <string name="displayable_social_timeline_store_latest_apps_headline">This store has new Apps</string>
  <string name="displayable_social_timeline_app_update_name">App %1$s</string>
  <string name="displayable_social_timeline_app_has_update">has an %1$s</string>
  <string name="displayable_social_timeline_article_get_app_button">Get app %1$s</string>
  <string name="displayable_social_timeline_app_update">update</string>
  <string name="displayable_social_timeline_app_update_version">Version %1$s</string>
  <string name="displayable_social_timeline_app_update_button">Update %1$s</string>
  <string name="appview_other_versions"><u>Other Versions</u></string>
  <string name="appview_latest_version_text">Latest version</string>
  <string name="appview_rate_this_app">rate this app</string>
  <string name="appview_read_all">read all <![CDATA[>]]></string>
  <string name="zero">0</string>
  <string name="working_well">Working Well</string>
  <string name="needs_license">Needs License</string>
  <string name="fake_app">Fake App</string>
  <string name="virus">Virus</string>
  <string name="additional_information">Additional information</string>
  <string name="displayable_social_timeline_app_update_updated">Updated</string>
  <string name="displayable_social_timeline_app_update_updating">Updating</string>
  <string name="displayable_social_timeline_app_update_error">Update Error</string>
  <string name="appview_good_app_guaranteed">Good App Guaranteed!</string>
  <string name="appview_good_app_description">This applications passed the security test for virus, malware and other malicious attacks and doesn\'t
        contain any threats!</string>
  <string name="other_versions_partial_title_1">Other</string>
  <string name="other_versions_partial_title_2">versions on different Stores</string>
  <string name="displayable_social_timeline_recommendation_similar_to">based on %1$s</string>
  <string name="displayable_social_timeline_recommendation_similar_and">and</string>
  <string name="displayable_social_timeline_recommendation_atptoide_team_recommends">%s recommends</string>
  <string name="social_facebook_screen_title">Facebook</string>
  <string name="social_twitter_screen_title">Twitter</string>
  <string name="top_comments">Top Comments</string>
  <string name="rate">Rate</string>
  <string name="rate_app">Rate %s</string>
  <string name="title">Title</string>
  <string name="tap_a_star">Tap a star to rate</string>
  <string name="other_versions_on_different_stores">Other versions on different stores</string>
  <string name="review_optional">Review (optional)</string>
  <string name="feedback_not_valid">Please enter some valid Subject!</string>
  <string name="thank_you_for_your_opinion">Thank you for your opinion!</string>
  <string name="ignore_update">Ignore Update</string>
  <string name="five_numeric">5</string>
  <string name="four_numeric">4</string>
  <string name="three_numeric">3</string>
  <string name="two_numeric">2</string>
  <string name="one_numeric">1</string>
  <string name="just_reviews">Just Reviews</string>
  <string name="downgrading_msg">Downgrading</string>
  <string name="updating_msg">Updating</string>
  <string name="installing_msg">Installing</string>
  <string name="needs_permission_to_fs">Needs permission to use the external File System</string>
  <string name="added_to_scheduled">Added to Menu &gt; Scheduled Downloads</string>
  <string name="pause_all_downloads">Pause Downloads</string>
  <string name="storage_access_permission_request_message">Please allow access to your phone’s storage so we can download and install this app.</string>
  <string name="remote_install_menu_title">Install on TV</string>
  <string name="install_on_tv_mobile_error">Make sure your device is connected to Wi-Fi to use this feature.</string>
  <string name="remote_install_title">Choose target device</string>
  <string name="remote_install_success">The app is now being installed</string>
  <string name="remote_install_fail">The remote installation has failed</string>
  <string name="remote_install_nodevices">No devices found</string>
  <string name="remote_install_notinstallated">Do you have Aptoide TV installed on your Android TV? \n http://aptoi.de/tv</string>
  <string name="dialog_install_warning_proceed_button">Proceed</string>
  <string name="dialog_install_warning_careful_text">Be careful if you choose to install this app. It may have been tampered with, have viruses or malware.</string>
  <string name="dialog_install_warning_credibility_text">Before proceeding, check the Store\'s
        credibility and other user comments. Aptoide always recommends that you only install %1$s Trusted apps.</string>
  <string name="social_timeline">Social Timeline</string>
  <string name="clearcache_title">Clear Storage</string>
  <string name="setting_category_autoupdate">%s Updates</string>
  <string name="setting_category_autoupdate_title">Get %s Update notifications</string>
  <string name="addressbook_allow_friends_find">Allow friends to find you</string>
  <string name="done">Done</string>
  <string name="addressbook_invite_friends">Invite friends to join you!</string>
  <string name="we_didn_t_find_any_contacts_that_are_using_aptoide">We didn\'t find any contacts that are using %1$s</string>
  <string name="login">Login</string>
  <string name="register">Sign Up</string>
  <string name="forgot_passwd"><u>Forgot password?</u></string>
  <string name="create_user_header"><b>Create your User Profile</b> so that you\'re able to rate, comment and share apps with your friends</string>
  <string name="create_user_take_picture">Take a picture for your profile</string>
  <string name="create_user_random_photo">Or use random photo</string>
  <string name="create_user_choose_username">Choose your username</string>
  <string name="create_user_username">User name</string>
  <string name="create_user_hint">Appears when you rate, comment and share apps.</string>
  <string name="feedback_subject">Subject</string>
  <string name="feedback_to_write2">Write here to send us your feedback…\n\n
        Please give us all the details you can get:
        \n\• Steps you have done
        \n\• Errors you are seeing</string>
  <string name="feedback_include_logs">Include ScreenShot and Logs</string>
  <string name="schDwnBtn">Schedule Download</string>
  <string name="feedback_send_button">Send Feedback</string>
  <string name="order_popup_title3">Adult Content</string>
  <string name="set_mature_pin_title">Set Adult Content pin</string>
  <string name="set_mature_pin_summary">Set a Pin that will be required to unlock adult Content</string>
  <string name="settings_title_bar">Settings</string>
  <string name="setting_wifi">WiFi</string>
  <string name="setting_mobile">Mobile 3G/4G</string>
  <string name="setting_general_download_rules">General Download Rules</string>
  <string name="setting_hwspecstitle">Hardware Specs</string>
  <string name="setting_hwspecssum">Hardware Info about your phone</string>
  <string name="setting_appfiltersum">Don\'t show applications that are not compatible with this device</string>
  <string name="setting_appfiltertitle">Filter Applications</string>
  <string name="setting_dont_show_mature_content">Show mature content</string>
  <string name="setting_mature_filtering">Adult Content</string>
  <string name="setting_updates">Updates</string>
  <string name="setting_updates_notification_sum">Show new updates notifications</string>
  <string name="setting_updates_notification_title">Updates Notification</string>
  <string name="setting_auto_update_sum">Enable applications automatic update</string>
  <string name="setting_auto_update_title">Enable auto update</string>
  <string name="show_all_updates">Don\'t show updates for applications with different signatures</string>
  <string name="setting_allUpdates_filtering">Filter Updates</string>
  <string name="setting_schdwninstallsum">Install scheduled downloads automatically when a WiFi connection is present</string>
  <string name="setting_schdwninstalltitle">Automatic Install</string>
  <string name="setting_clear_memory">Storage</string>
  <string name="clearcontent_title">Remove data and configurations</string>
  <string name="settings_maxFileCache_sum">Set a maximum size to keep your apk files</string>
  <string name="settings_maxFileCache_title">Download File Cache (MB)</string>
  <string name="change_theme">Change theme</string>
  <string name="theme">Themes</string>
  <string name="root">Root</string>
  <string name="allow_root">Allow root installation</string>
  <string name="disable_social_timeline">Disable Social Timeline</string>
  <string name="social_timeline_notifications_sum2">Enable Aptoide Social Timeline Notifications. You will receive the latest news on the notification bar.</string>
  <string name="social_timeline_notifications">Timeline Notifications</string>
  <string name="about_us">About us</string>
  <string name="drawer_social_media_title">Let\'s stay connected</string>
  <string name="warning">Warning</string>
  <string name="share">Share</string>
</resources>