<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2016.
  ~ Modified by SithEngineer on 04/08/2016.
  -->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="root"
    android:title="@string/settings_title_bar">

  <PreferenceCategory
      android:title="@string/setting_general_download_rules"
      >

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="generalnetworkwifi"
        android:title="@string/setting_wifi"
        />
    <CheckBoxPreference
        android:defaultValue="true"
        android:key="generalnetworkmobile"
        android:title="@string/setting_mobile"
        />

  </PreferenceCategory>


  <PreferenceCategory android:title="@string/setting_hwspecstitle">
    <Preference
        android:key="hwspecs"
        android:summary="@string/setting_hwspecssum"
        android:title="@string/setting_hwspecstitle"/>
    <CheckBoxPreference
        android:defaultValue="true"
        android:key="hwspecsChkBox"
        android:summary="@string/setting_appfiltersum"
        android:title="@string/setting_appfiltertitle"/>
  </PreferenceCategory>

  <PreferenceCategory android:title="@string/setting_category_autoupdate">
    <CheckBoxPreference
        android:defaultValue="true"
        android:key="checkautoupdate"
        android:title="@string/setting_category_autoupdate_title"/>
  </PreferenceCategory>

  <PreferenceCategory
      android:key="adultContent"
      android:title="@string/order_popup_title3">
    <CheckBoxPreference
        android:defaultValue="true"
        android:key="matureChkBox"
        android:summary="@string/setting_dont_show_mature_content"
        android:title="@string/setting_mature_filtering"/>
    <Preference
        android:inputType="number"
        android:key="Maturepin"
        android:summary="@string/set_mature_pin_summary"
        android:title="@string/set_mature_pin_title"/>
  </PreferenceCategory>

  <PreferenceCategory android:title="@string/setting_updates">
    <CheckBoxPreference
        android:defaultValue="true"
        android:key="showUpdatesNotification"
        android:summary="@string/setting_updates_notification_sum"
        android:title="@string/setting_updates_notification_title"/>
    <CheckBoxPreference
        android:key="auto_update"
        android:summary="@string/setting_auto_update_sum"
        android:title="@string/setting_auto_update_title"/>
    <CheckBoxPreference
        android:defaultValue="true"
        android:key="showAllUpdates"
        android:summary="@string/show_all_updates"
        android:title="@string/setting_allUpdates_filtering"/>
    <CheckBoxPreference
        android:defaultValue="false"
        android:key="updatesFilterKey"
        android:summary="@string/updates_filter_summary"
        android:title="@string/updates_filter_setting_title"/>
  </PreferenceCategory>

  <PreferenceCategory android:title="@string/setting_schdwntitle">
    <CheckBoxPreference
        android:key="schDwnBox"
        android:summary="@string/setting_schdwninstallsum"
        android:title="@string/setting_schdwninstalltitle"/>
  </PreferenceCategory>
  <PreferenceCategory android:title="@string/setting_clear_memory">
    <Preference
        android:key="clearapk"
        android:title="@string/clearcontent_title"/>
    <Preference
        android:key="clearcache"
        android:title="@string/clearcache_title"/>

    <EditTextPreference
        android:inputType="number"
        android:key="maxFileCache"
        android:maxLength="3"
        android:numeric="integer"
        android:summary="@string/settings_maxFileCache_sum"
        android:title="@string/settings_maxFileCache_title"/>
  </PreferenceCategory>

  <PreferenceCategory
      android:key="changetheme"
      android:title="@string/change_theme">
    <ListPreference
        android:defaultValue="light"
        android:entries="@array/theme_names"
        android:entryValues="@array/themes"
        android:key="theme"
        android:title="@string/theme"/>
  </PreferenceCategory>

  <PreferenceCategory android:title="@string/root">
    <CheckBoxPreference
        android:key="allowRoot"
        android:title="@string/allow_root"/>
  </PreferenceCategory>

  <PreferenceCategory
      android:key="socialtimeline"
      android:title="@string/social_timeline">
    <Preference
        android:key="disablesocialtimeline"
        android:title="@string/disable_social_timeline"/>
    <CheckBoxPreference
        android:defaultValue="true"
        android:key="socialtimelinenotifications"
        android:summary="@string/social_timeline_notifications_sum2"
        android:title="@string/social_timeline_notifications"/>
  </PreferenceCategory>
  <PreferenceCategory
      android:key="about"
      android:title="@string/about_us">
    <Preference
        android:key="aboutDialog"
        android:title="@string/about_us"/>
  </PreferenceCategory>

  <!--
  <PreferenceCategory android:title="@string/animations">
      <CheckBoxPreference
          android:defaultValue="true"
          android:key="animationsEnabled"
          android:title="@string/animations_enabled"/>
  </PreferenceCategory>
  -->

</PreferenceScreen>
