<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2016.
  ~ Modified on 19/07/2016.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

  <item
      android:id="@+id/menu_item_search"
      android:icon="@drawable/ic_search"
      android:orderInCategory="1"
      android:title="@string/search"
      app:actionLayout="@layout/search_input_text"
      app:actionViewClass="android.support.v7.widget.SearchView"
      app:showAsAction="always|collapseActionView"/>

  <item
      android:id="@+id/menu_item_share"
      android:icon="@drawable/ic_action_share"
      android:orderInCategory="2"
      android:title="@string/share"
      app:showAsAction="ifRoom"/>

  <item
      android:id="@+id/menu_uninstall"
      android:title="@string/uninstall"
      android:visible="false"
      app:showAsAction="never"/>

  <item
      android:id="@+id/menu_remote_install"
      android:title="@string/remote_install_menu_title"
      app:showAsAction="never"/>
</menu>
