<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

  <!-- social login -->

  <com.facebook.login.widget.LoginButton
      android:id="@+id/fb_login_button"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="4dp"
      android:paddingBottom="10dp"
      android:paddingTop="10dp"
      />

  <com.google.android.gms.common.SignInButton
      android:id="@+id/g_sign_in_button"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="5dp"
      />


  <!-- login -->

  <include layout="@layout/credentials_edit_texts"/>

  <Button
      android:id="@+id/button_register"
      android:layout_width="match_parent"
      android:layout_height="48dp"
      android:text="@string/register"
      style="?attr/customButtonWhite"
      />

  <Button
      android:id="@+id/button_login"
      android:layout_width="match_parent"
      android:layout_height="48dp"
      android:text="@string/login"
      style="?attr/customButton"
      />


  <!-- sign up -->


  <!-- forgot password -->
  <TextView
      android:id="@+id/forgot_password"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_gravity="center_horizontal"
      android:layout_marginBottom="10dp"
      android:layout_marginTop="10dp"
      android:gravity="center"
      android:text="@string/forgot_passwd"
      android:textColor="?android:attr/textColorSecondary"
      />

</LinearLayout>
