<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/invite_friends_fragment_id"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginEnd="30dp"
    android:layout_marginLeft="30dp"
    android:layout_marginRight="30dp"
    android:layout_marginStart="30dp"
    android:orientation="vertical">

  <ImageView
      android:id="@+id/addressbook_friends_graphic"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="10dp"
      android:layout_marginTop="24.3dp"
      android:src="@drawable/addressbook_graphic" />

  <TextView
      android:id="@+id/addressbook_increase_network"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@+id/addressbook_friends_graphic"
      android:layout_gravity="center"
      android:layout_marginBottom="5dp"
      android:layout_marginEnd="30dp"
      android:layout_marginLeft="30dp"
      android:layout_marginRight="30dp"
      android:layout_marginStart="30dp"
      android:layout_marginTop="10dp"
      android:clickable="false"
      android:gravity="center"
      android:lineSpacingExtra="5dp"
      android:lines="2"
      android:text="@string/we_didn_t_find_any_contacts_that_are_using_aptoide"
      android:textColor="?android:attr/textColorSecondary" />

  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@id/addressbook_increase_network"
      android:layout_marginTop="10dp"
      android:gravity="center_horizontal"
      android:text="@string/addressbook_invite_friends"
      android:textColor="@color/aptoide_orange"
      android:textSize="15sp"
      android:textStyle="bold" />

  <Button
      android:id="@+id/addressbook_share_social"
      style="?attr/customButton"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_above="@+id/addressbook_allow_find"
      android:padding="10dp"
      android:text="@string/share_options_share_external" />


  <Button
      android:id="@+id/addressbook_allow_find"
      style="?attr/customButton"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_above="@+id/addressbook_done"
      android:padding="10dp"
      android:text="@string/addressbook_allow_friends_find" />

  <Button
      android:id="@+id/addressbook_done"
      style="?attr/customButton"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_alignParentBottom="true"
      android:layout_marginBottom="10dp"
      android:padding="10dp"
      android:text="@string/done" />
</RelativeLayout>